tests/paczka1/small_fuzzy/77707188.err
Error in line 1: jpztA4cq S988 26,8
Error in line 6: E4vzEm A665 -14,7
Error in line 7: tpG9iG A143 10,3
Error in line 2: lmUF A665 36,5
Error in line 4: E4vzEm A665 15,3
